<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <RadioGroup
            android:id="@+id/groupRescueConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioRescuedYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizen_detail_confirm_yes" />

            <RadioButton
                android:id="@+id/radioRescuedNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citizen_detail_confirm_no" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/citizen_detail_confirm_reason_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="1000"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
